--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <img src="img/Image.png" alt="Рисунок">
         <div class="menu-content">
             <div class="text">Change your life today</div>
-            <a href="htmll — копия.htm"><button>Get started</button></a>
+            <a href="indexx.html"><button>Get started</button></a>
         </div>
     </div>
 
